--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
-    "presets": ["env", "react"]
-  }
-  
+  "presets": [
+    "env",
+    "react"
+  ],
+  "plugins": [
+    [
+      "transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
+  ]
+}
