--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,13 @@
 {
   "presets": [
-    "env",
-    "react"
+    "@babel/preset-env",
+    "@babel/preset-react"
   ],
   "plugins": [
     [
-      "transform-runtime",
+      "@babel/plugin-transform-runtime",
       {
+        "corejs": 2,
         "regenerator": true
       }
     ]
