--- a/package.json
+++ b/package.json
@@ -1,46 +1,29 @@
 {
-  "name": "aaa",
+  "name": "flappy",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.jsx",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack --mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DmytroBorysenko/FrontEndAdvance.git"
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DmytroBorysenko/FrontEndAdvance/issues"
-  },
-  "homepage": "https://github.com/DmytroBorysenko/FrontEndAdvance#readme",
+  "keywords": [],
+  "description": "",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.15.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "javascript-state-machine": "^3.1.0",
     "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "javascript-state-machine": "^3.1.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "superagent": "^4.1.0"
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5"
   }
 }
