--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.4.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5"
   }
