--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
+    "copy-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "javascript-state-machine": "^3.1.0",
     "webpack": "^4.29.6",
